# refactoring_the

./: CMakeLists.txt  DllMain.cpp  DllMain.h  FinalPSolver.cpp  FinalPSolver.h  README.md  border.cpp  border.h  colloc_points.txt  d3_zone.cpp  d3_zone.h  data.txt  data1.txt  data2.txt  data_points.cpp  data_points.h  init_data.cpp  init_data.h  layer.cpp  layer.h  main.cpp  output.cpp  output.h  pressures.cpp  pressures.h  settings.cpp  settings.h  subfield_rec_solver.cpp  subfield_rec_solver.h  text_output.cpp  text_output.h  useful.cpp  useful.h  useful_linear_algebra.cpp  useful_linear_algebra.h
input/: 3data.txt  3data_stress.txt  colloc_points.txt  data.txt  data1.txt  data2.txt  densities.txt  orders.txt  pressures.txt  settings.txt
